# Three-Cobblers

./: .gitignore  README.md  config.example.json  consensus-engine.service.example  pyproject.toml  pytest.ini
MCP/: consensus-engine.service.example  pyproject.toml
MCP/consensus_engine/: server.py  templates.py
SKILL/: SKILL.md
consensus_engine/: __init__.py  __main__.py  client.py  config.py  logging.py  orchestrator.py  server.py  templates.py  writer.py
docs/: prd.md  usage.md
docs/AI-analyze-result/: knowledge_base.md  project_spec.md
docs/archs/: 20260319_1243_arch.md
docs/plans/: 2026-03-18-consensus-engine-design.md  2026-03-18-consensus-engine-impl.md
examples/: test_debate.py
tests/: test_basic.py  test_client.py  test_config.py  test_logging.py  test_orchestrator.py  test_server.py  test_templates.py  test_writer.py
tests/integration/: __init__.py  test_integration.py
